; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_cgroup-util.c_cg_all_unified.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_cgroup-util.c_cg_all_unified.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CGROUP_UNIFIED_ALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cg_all_unified() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @cg_unified_cached(i32 0)
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* %1, align 4
  br label %13

8:                                                ; preds = %0
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @CGROUP_UNIFIED_ALL, align 4
  %11 = icmp sge i32 %9, %10
  %12 = zext i1 %11 to i32
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %8, %6
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @cg_unified_cached(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
